--- a/app.json
+++ b/app.json
@@ -1,36 +1,34 @@
 {
   "expo": {
-    "name": "kavita-reader",
+    "name": "KavitaReader",
     "slug": "kavita-reader",
+    "description": "A modern mobile reader for Kavita servers",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#3D4A2C"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.hesshomestead.reader",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#3D4A2C"
       },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false,
-      "package": "com.webtechnick.kavitareader"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      "package": "com.hesshomestead.reader"
     },
     "extra": {
       "eas": {
         "projectId": "45df5044-5be7-4201-8f7b-760737b9f86d"
       }
-    }
+    },
+    "owner": "webtechnick"
   }
 }
