--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/native-stack": "^7.7.0",
     "axios": "^1.13.2",
     "expo": "~54.0.25",
+    "expo-audio": "~1.0.15",
     "expo-av": "~16.0.7",
     "expo-dev-client": "~6.0.18",
     "expo-document-picker": "~14.0.7",
     "expo-image": "~3.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.13",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-blob-util": "^0.24.4",
